feat: Integrate Gemini API with enhanced configuration and error handling
This commit introduces the Gemini API integration by adding a new `key_manager` service and updating the `gemini_service`. It also enhances the API request and response schemas to support a wider range of Gemini features, including function calls, file data, and detailed generation configurations.

Additionally, environment variables for API key cooldown and debug logging have been added to `.env.example`. VS Code settings are updated to include `cSpell` for better code quality.

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,9 @@ GOOGLE_API_KEY="YOUR_GEMINI_API_KEY"
 
 # Optional: Log level (default: INFO). Options: DEBUG, INFO, WARNING, ERROR, CRITICAL
 # LOG_LEVEL="INFO"
+
+# Optional: Enable debug logging (default: False). Set to True to enable debug logging
+# DEBUG_LOG_ENABLED=False
+
+# Optional: Time to cool down API key after it has been failed (default: 300 seconds)
+# API_KEY_COOL_DOWN_SECONDS=300
