feat: Add Docker support for application deployment
Introduces Dockerfile and docker-compose.yml to containerize the application. This enables easier setup and consistent environments for development and deployment.
A .dockerignore file is included to optimize image size by excluding unnecessary files from the build context.
Updates to .env.example reflect environment variable usage within the containerized setup, including new logging options.

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
-# Google Gemini API Key
-GOOGLE_API_KEY="YOUR_GEMINI_API_KEY"
+# Google API Key for Gemini API
+# GOOGLE_API_KEY=your_google_api_key_here
 
-# Optional: Base URL for Gemini API (default: https://generativelanguage.googleapis.com)
-# GEMINI_API_BASE_URL="https://generativelanguage.googleapis.com"
+# Enable debug logging (true/false)
+# DEBUG_LOG_ENABLED=false
 
-# Optional: Log level (default: INFO). Options: DEBUG, INFO, WARNING, ERROR, CRITICAL
-# LOG_LEVEL="INFO"
+# Path for debug log file (relative to app root)
+# DEBUG_LOG_FILE=/app/logs/debug.log
 
-# Optional: Enable debug logging (default: False). Set to True to enable debug logging
-# DEBUG_LOG_ENABLED=False
+# Logging level (INFO, DEBUG, WARNING, ERROR, CRITICAL)
+# LOG_LEVEL=INFO
 
-# Optional: Time to cool down API key after it has been failed (default: 300 seconds)
-# API_KEY_COOL_DOWN_SECONDS=300
+# API Key cooldown period in seconds after a failure
+# API_KEY_COOLDOWN_SECONDS=300
