feat: Integrate v2raya for proxy support in Docker Compose
Adds a new `v2raya` service to `docker-compose.yml` to provide network proxying capabilities. Configures the `gemini-balance` service to use `v2raya` as its HTTP and HTTPS proxy, enabling it to operate in environments requiring proxy access.

Also, updates `.vscode/settings.json` to include 'pyproject' in the cSpell dictionary.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   gemini-balance:
@@ -9,3 +9,25 @@ services:
       - .env
     volumes:
       - ./logs:/app/logs
+    environment:
+      # 根据需要配置代理环境，如不需要，可删除v2rayA
+      - HTTP_PROXY=http://v2raya:20170
+      - HTTPS_PROXY=http://v2raya:20170
+    depends_on:
+      - v2raya
+
+  v2raya:
+    image: mzz2017/v2raya
+    container_name: v2raya
+    restart: always
+    ports:
+      - "2017:2017"
+      - "20170-20172:20170-20172"
+    environment:
+      - V2RAYA_V2RAY_BIN=/usr/local/bin/v2ray
+      - V2RAYA_LOG_FILE=/tmp/v2raya.log
+    volumes:
+      - v2raya_config:/etc/v2raya
+
+volumes:
+  v2raya_config:
