--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
   "python.testing.unittestEnabled": false,
   "python.testing.pytestEnabled": true,
   "flake8.args": ["--ignore=E501,E302,E261,W293"],
-  "cSpell.words": ["levelname"]
+  "cSpell.words": [
+    "levelname",
+    "pyproject"
+  ]
 }
