feat: Introduce Docker Compose for containerized deployment
Add `docker-compose.yml` to simplify application and proxy service deployment.
This includes:
*   Integration of `v2raya` proxy service.
*   Configuration for shared network with Open WebUI.
*   Updated `README.md` with Docker Compose as the recommended deployment method and refined API endpoint details.
*   Reflected containerization in `project_info.md` for consistency.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,9 @@ services:
       - .env
     volumes:
       - ./logs:/app/logs
+    # 与Open Webui 共享网络，如果不需要，可删除shared_net
+    networks:
+      - shared_net
     environment:
       # 根据需要配置代理环境，如不需要，可删除v2rayA
       - HTTP_PROXY=http://v2raya:20170
@@ -19,6 +22,9 @@ services:
   v2raya:
     image: mzz2017/v2raya
     container_name: v2raya
+    # 与Open Webui 共享网络，如果不需要，可删除shared_net
+    networks:
+      - shared_net
     restart: always
     ports:
       - "2017:2017"
@@ -31,3 +37,9 @@ services:
 
 volumes:
   v2raya_config:
+
+# 与Open Webui 共享网络，如果不需要，可删除shared_net
+networks:
+  shared_net:
+    external: true
+    name: gemini-balance-open-webui
