--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,8 @@
   "python.testing.pytestArgs": ["tests"],
   "python.testing.unittestEnabled": false,
   "python.testing.pytestEnabled": true,
-  "flake8.args": ["--ignore=E501,E302,E261,W293"],
   "cSpell.words": [
+    "autouse",
     "levelname",
     "pyproject"
   ]
