Refine .dockerignore to exclude build-related files
Exclude `.env`, `.dockerignore`, `.docker-compose.yml`, and `Dockerfile` from the Docker build context. This reduces the final image size and prevents sensitive or unnecessary files from being copied into the image. Also, update `.clinerules` to correctly ignore the directory.

--- a/.dockerignore
+++ b/.dockerignore
@@ -12,8 +12,12 @@ __pycache__/
 .venv/
 
 .vscode/
-.clinerules
+.clinerules/
 
 logs/
 tests/
+
 .env
+.dockerignore
+.docker-compose.yml
+Dockerfile
