feat: Enhance .env.example with comprehensive configuration
- Update `GOOGLE_API_KEY` to `GOOGLE_API_KEYS` for multiple key support.
- Add `GEMINI_API_BASE_URL` and `OPENAI_API_BASE_URL` for API endpoint configuration.
- Introduce detailed logging settings: `LOG_LEVEL`, `DEBUG_LOG_ENABLED`, `DEBUG_LOG_FILE`.
- Enhance API key management with `API_KEY_FAILURE_THRESHOLD` and `MAX_COOL_DOWN_SECONDS`.
- Provide default values and Chinese comments for all new and updated variables.

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,35 @@
-# Google API Key for Gemini API
-# GOOGLE_API_KEY=your_google_api_key_here
+# Google Gemini API 密钥，多个密钥用逗号分隔。
+# 例如：GOOGLE_API_KEYS="your_api_key_1,your_api_key_2"
+GOOGLE_API_KEYS=
 
-# Enable debug logging (true/false)
-# DEBUG_LOG_ENABLED=false
+# Google Gemini API 的基础 URL。
+# 默认值：https://generativelanguage.googleapis.com
+GEMINI_API_BASE_URL=https://generativelanguage.googleapis.com
 
-# Path for debug log file (relative to app root)
-# DEBUG_LOG_FILE=/app/logs/debug.log
+# OpenAI API 的基础 URL。
+# 默认值：https://generativelanguage.googleapis.com (注意：这里可能需要根据实际OpenAI API地址调整)
+OPENAI_API_BASE_URL=https://generativelanguage.googleapis.com
 
-# Logging level (INFO, DEBUG, WARNING, ERROR, CRITICAL)
-# LOG_LEVEL=INFO
+# 日志级别 (DEBUG, INFO, WARNING, ERROR, CRITICAL)。
+# 默认值：INFO
+LOG_LEVEL=INFO
 
-# API Key cooldown period in seconds after a failure
-# API_KEY_COOLDOWN_SECONDS=300
+# 是否启用调试日志。设置为 "true" 启用，"false" 禁用。
+# 默认值：False
+DEBUG_LOG_ENABLED=False
+
+# 调试日志文件的路径。
+# 默认值：logs/gemini_debug.log
+DEBUG_LOG_FILE=logs/gemini_debug.log
+
+# API 密钥冷却时间（秒），当密钥失败时，该密钥将在此时间内不被使用。
+# 默认值：300 (5分钟)
+API_KEY_COOL_DOWN_SECONDS=300
+
+# API 密钥失败阈值，当密钥失败次数达到此值时，将进入冷却期。
+# 默认值：3
+API_KEY_FAILURE_THRESHOLD=3
+
+# API 密钥最大冷却时间（秒），防止无限期冷却。
+# 默认值：43200 (12小时)
+MAX_COOL_DOWN_SECONDS=43200
