Add default rate limit wait time and improve key logging
Introduce `RATE_LIMIT_DEFAULT_WAIT_SECONDS` to `.env.example` for configuring the default wait time when an API request is rate-limited.
Refine the API key cool-down log message to display the key suffix as `...[suffix]` for improved readability.

--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,7 @@ API_KEY_FAILURE_THRESHOLD=3
 # API 密钥最大冷却时间（秒），防止无限期冷却。
 # 默认值：43200 (12小时)
 MAX_COOL_DOWN_SECONDS=43200
+
+# 默认的等待时间（秒），当 API 请求被限速时，将等待此时间后重试。
+# 默认值：90 (1.5分钟)
+RATE_LIMIT_DEFAULT_WAIT_SECONDS=90
