Refactor: Move backend code to dedicated 'backend/' directory
Relocate all core application code, Dockerfile, and related configuration files into a new `backend/` directory. This establishes a clear separation for the backend service, preparing the repository for a monorepo structure.

Update `.gitignore` and `project_info.md` to reflect the new file paths and architecture. Add `todo_list.md` for tracking tasks.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 services:
   gemini-balance:
-    build: .
+    build: ./backend
     ports:
       - "8090:8090"
     env_file:
       - .env
     volumes:
-      - ./logs:/app/logs
+      - ./backend/logs:/app/logs
     # 与Open Webui 共享网络，如果不需要，可删除shared_net
     networks:
       - shared_net
