--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,6 @@
 {
-  "python.testing.pytestArgs": ["tests"],
+  "python.testing.pytestArgs": ["backend/tests"],
   "python.testing.unittestEnabled": false,
   "python.testing.pytestEnabled": true,
-  "cSpell.words": [
-    "autouse",
-    "levelname",
-    "pyproject"
-  ]
+  "cSpell.words": ["autouse", "levelname", "pyproject"]
 }
