Feat: Add API key usage tracking and status endpoint
*   Implement API key usage tracking per model in `KeyManager`.
*   Record API key and model usage on successful requests within `ApiService`.
*   Introduce a new `/api/status` endpoint to display API key health and usage statistics.
*   Add `WEBSOCKET_LOG_REFRESH_SECONDS` setting for WebSocket log refresh rate.
*   Include new debugging workflow documentation.

--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,7 @@ MAX_COOL_DOWN_SECONDS=43200
 # 默认的等待时间（秒），当 API 请求被限速时，将等待此时间后重试。
 # 默认值：90 (1.5分钟)
 RATE_LIMIT_DEFAULT_WAIT_SECONDS=90
+
+# WebSocket 日志刷新间隔（秒）。
+# 默认值：1.0
+WEBSOCKET_LOG_REFRESH_SECONDS=1.0
