Unify frontend and backend deployment
Implement a multi-stage Dockerfile to build and integrate the SvelteKit frontend with the FastAPI backend. Frontend static assets are now served directly by the backend application.

This change:
- Simplifies the Docker setup by consolidating frontend and backend builds into a single `Dockerfile`.
- Removes the separate `backend/Dockerfile` and streamlines `docker-compose.yml`.
- Updates `README.md` and `project_info.md` to reflect the new integrated architecture and deployment instructions.
- Improves deployment simplicity and eliminates potential CORS issues.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,14 @@
 services:
   gemini-balance:
-    build: ./backend
+    build:
+      context: .
+      dockerfile: backend/Dockerfile
     ports:
       - "8090:8090"
     env_file:
       - .env
     volumes:
-      - ./backend/logs:/app/logs
+      - ./logs:/app/backend/logs # 调整日志路径
     # 与Open Webui 共享网络，如果不需要，可删除shared_net
     networks:
       - shared_net
