feat: Support indexed Google API keys and refine env config
Implement support for loading Google API keys from indexed environment variables (e.g., `GOOGLE_API_KEY_1`, `GOOGLE_API_KEY_2`), in addition to the existing comma-separated `GOOGLE_API_KEYS`. This offers a more flexible and secure way to manage multiple keys.

Update `.env.example` to recommend the new indexed key format. Remove `WEBSOCKET_LOG_REFRESH_SECONDS` and add `LOG_HISTORY_SIZE` to environment configuration.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
-# Google Gemini API 密钥，多个密钥用逗号分隔。
-# 例如：GOOGLE_API_KEYS="your_api_key_1,your_api_key_2"
+# Google Gemini API 密钥。
+# 可以使用逗号分隔的单个环境变量：GOOGLE_API_KEYS="key1,key2"
+# 或者使用索引化的多个环境变量（推荐）：
+# GOOGLE_API_KEY_1="your_api_key_1"
+# GOOGLE_API_KEY_2="your_api_key_2"
+# GOOGLE_API_KEY_3="your_api_key_3"
 GOOGLE_API_KEYS=
 
 # Google Gemini API 的基础 URL。
@@ -38,6 +42,6 @@ MAX_COOL_DOWN_SECONDS=43200
 # 默认值：90 (1.5分钟)
 RATE_LIMIT_DEFAULT_WAIT_SECONDS=90
 
-# WebSocket 日志刷新间隔（秒）。
-# 默认值：1.0
-WEBSOCKET_LOG_REFRESH_SECONDS=1.0
+# 日志历史记录大小，用于在内存中保留的日志条目数。
+# 默认值：100
+LOG_HISTORY_SIZE=100
