feat: Make key acquisition atomic and notify waiters
Refactor `KeyManager.acquire_key` to use `zrem` for atomic key acquisition. This ensures that a key is removed from the available pool immediately upon acquisition, preventing concurrent clients from acquiring the same key.

Add `_condition.notify_all()` in `mark_key_failed` to promptly wake up any `acquire_key` calls waiting for keys to become available, improving responsiveness.

Update cSpell dictionary with new Redis ZSET commands.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,16 @@
   "python.testing.pytestArgs": ["backend/tests"],
   "python.testing.unittestEnabled": false,
   "python.testing.pytestEnabled": true,
-  "cSpell.words": ["autouse", "levelname", "pyproject"]
+  "cSpell.words": [
+    "autouse",
+    "levelname",
+    "pyproject",
+    "withscores",
+    "zadd",
+    "zcount",
+    "zrange",
+    "zrangebyscore",
+    "zrem",
+    "zset"
+  ]
 }
