Revert "feat: Make key acquisition atomic and notify waiters"
This reverts commit ef9ad127960b624ca3df8c2b8f5d118384bff2ff.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,16 +2,5 @@
   "python.testing.pytestArgs": ["backend/tests"],
   "python.testing.unittestEnabled": false,
   "python.testing.pytestEnabled": true,
-  "cSpell.words": [
-    "autouse",
-    "levelname",
-    "pyproject",
-    "withscores",
-    "zadd",
-    "zcount",
-    "zrange",
-    "zrangebyscore",
-    "zrem",
-    "zset"
-  ]
+  "cSpell.words": ["autouse", "levelname", "pyproject"]
 }
