--- a/.env.example
+++ b/.env.example
@@ -45,3 +45,8 @@ RATE_LIMIT_DEFAULT_WAIT_SECONDS=90
 # 日志历史记录大小，用于在内存中保留的日志条目数。
 # 默认值：100
 LOG_HISTORY_SIZE=100
+
+# Redis 配置
+REDIS_HOST=gemini-balance-redis
+REDIS_PORT=6379
+REDIS_DB=0
