--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "python.testing.pytestArgs": ["backend/tests"],
   "python.testing.unittestEnabled": false,
   "python.testing.pytestEnabled": true,
-  "cSpell.words": ["autouse", "levelname", "pyproject"]
+  "cSpell.words": ["autouse", "levelname", "pyproject"],
+  "flake8.args": ["--max-line-length=88", "--ignore=W503,E501"],
 }
