Upgrade python version
- Upgrade Python version from 3.12 to 3.13.
- Refine `pyproject.toml` by moving development dependencies (pytest) to a dedicated `dev` group.

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,8 +11,6 @@ dependencies = [
     "httpx>=0.28.1",
     "pydantic>=2.11.7",
     "pydantic-settings>=2.10.1",
-    "pytest>=8.4.1",
-    "pytest-asyncio>=1.0.0",
     "python-dotenv>=1.1.1",
     "redis[hiredis]>=6.2.0",
     "uvicorn>=0.35.0",
@@ -21,3 +19,9 @@ dependencies = [
 [[tool.uv.index]]
 url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
 default = true
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.1",
+    "pytest-asyncio>=1.1.0",
+]
