--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,8 @@ services:
     networks:
       - shared_net
     restart: always
+    sysctls:
+      - vm.overcommit_memory=1
     ports:
       - "2017:2017"
       - "20170-20172:20170-20172"
@@ -41,7 +43,6 @@ services:
     ports:
       - "6379:6379"
     volumes:
-      - ./redis.conf:/usr/local/etc/redis/redis.conf
       - redis_data:/data
     networks:
       - shared_net
