Configure Redis memory limits and eviction policy
Mount `redis.conf` into the Redis container to apply custom settings.
Set `maxmemory` to 256MB and `maxmemory-policy` to `allkeys-lru`.
This prevents Redis from consuming excessive memory and ensures efficient key eviction.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,9 @@ services:
     container_name: gemini-balance-redis
     ports:
       - "6379:6379"
+    command: redis-server /usr/local/etc/redis/redis.conf
     volumes:
+      - ./redis.conf:/usr/local/etc/redis/redis.conf
       - redis_data:/data
     networks:
       - shared_net
