feat: Implement pluggable key manager with SQLite support
Introduce a flexible key management system allowing selection between Redis and SQLite backends.

This commit:
- Adds a `KeyManager` base service for common key management operations.
- Implements `SQLiteKeyManager` to manage API keys using a SQLite database.
- Refactors `RedisKeyManager` to inherit from the new base class.
- Configures dynamic loading of the key manager based on the `DATABASE_TYPE` environment variable (`redis` or `sqlite`).
- Updates `.env.example` and `config.py` with `DATABASE_TYPE` and `SQLITE_DB` settings.
- Modifies `main.py` and `status.py` to use the generic `key_manager` import.
- Updates relevant tests to support the new architecture.

--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,11 @@ FORCE_RESET_REDIS=False
 # 最大重试次数。
 # 默认值：3
 MAX_RETRIES=3
+
+# 数据库类型，可选值为 "redis" 或 "sqlite"。
+# 默认值：sqlite
+DATABASE_TYPE=sqlite
+
+# SQLite 数据库文件路径。
+# 默认值：data/sqlite.db
+SQLITE_DB=data/sqlite.db
