Refactor: Introduce explicit KeyManager initialization
Add an abstract `initialize()` method to the `KeyManager` base class and implement it in `RedisKeyManager` and `SQLiteKeyManager`.
Call this method explicitly during the application's lifespan startup.
This centralizes and standardizes the setup process for different key manager implementations.
For SQLite, ensure the data directory is created and persist data via a new volume mount in `docker-compose.yml`.
Remove redundant initialization calls from constructors and background tasks.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - .env
     volumes:
       - ./logs:/app/backend/logs # 调整日志路径
+      - ./data:/app/backend/data # 调整数据路径
     # 与Open Webui 共享网络，如果不需要，可删除shared_net
     networks:
       - shared_net
