--- a/.env.example
+++ b/.env.example
@@ -51,8 +51,8 @@ REDIS_HOST=gemini-balance-redis
 REDIS_PORT=6379
 REDIS_DB=0
 
-# 是否强制重置 Redis 数据库。
-FORCE_RESET_REDIS=False
+# 是否强制重置数据库。
+FORCE_RESET_DATABASE=False
 
 # 最大重试次数。
 # 默认值：3
