--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,13 +5,16 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "fakeredis[hiredis]>=2.30.1",
     "fastapi>=0.116.0",
     "google-generativeai>=0.8.5",
     "httpx>=0.28.1",
+    "passlib>=1.7.4",
+    "bcrypt<4.1",
     "pydantic>=2.11.7",
     "pydantic-settings>=2.10.1",
     "python-dotenv>=1.1.1",
+    "python-jose[cryptography]>=3.5.0",
+    "python-multipart>=0.0.20",
     "redis[hiredis]>=6.2.0",
     "uvicorn>=0.35.0",
 ]
