--- a/.env.example
+++ b/.env.example
@@ -65,3 +65,19 @@ DATABASE_TYPE=sqlite
 # SQLite 数据库文件路径。
 # 默认值：data/sqlite.db
 SQLITE_DB=data/sqlite.db
+
+# 默认密码，用于简化登录。
+# 默认值：admin
+PASSWORD=admin
+
+# 用于 JWT 签名的密钥。
+# 默认值：your-super-secret-key
+SECRET_KEY=your-super-secret-key
+
+# JWT 签名算法。
+# 默认值：HS256
+ALGORITHM=HS256
+
+# 访问令牌过期时间（分钟）。
+# 默认值：30
+ACCESS_TOKEN_EXPIRE_MINUTES=30
