--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,9 +19,10 @@ dependencies = [
     "uvicorn>=0.35.0",
 ]
 
-[[tool.uv.index]]
-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
-default = true
+# [[tool.uv.index]]
+# url = "https://pypi.tuna.tsinghua.edu.cn/simple"
+# url = "https://mirrors.aliyun.com/pypi/simple"
+# default = true
 
 [dependency-groups]
 dev = [
