--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "python-multipart>=0.0.20",
     "redis[hiredis]>=6.2.0",
     "uvicorn>=0.35.0",
+    "aiosqlite>=0.21.0",
 ]
 
 # [[tool.uv.index]]
