--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+# API 配置
 # Google Gemini API 的基础 URL。
 # 默认值：https://generativelanguage.googleapis.com
 GEMINI_API_BASE_URL=https://generativelanguage.googleapis.com
@@ -6,6 +7,11 @@ GEMINI_API_BASE_URL=https://generativelanguage.googleapis.com
 # 默认值：https://generativelanguage.googleapis.com (注意：这里可能需要根据实际OpenAI API地址调整)
 OPENAI_API_BASE_URL=https://generativelanguage.googleapis.com
 
+# 请求超时配置（秒）
+# 默认值120
+REQUEST_TIMEOUT_SECONDS=120
+
+# 日志配置
 # 日志级别 (DEBUG, INFO, WARNING, ERROR, CRITICAL)。
 # 默认值：INFO
 LOG_LEVEL=INFO
@@ -18,6 +24,11 @@ DEBUG_LOG_ENABLED=False
 # 默认值：logs/gemini_debug.log
 DEBUG_LOG_FILE=logs/gemini_debug.log
 
+# 日志历史记录大小，用于在内存中保留的日志条目数。
+# 默认值：100
+LOG_HISTORY_SIZE=100
+
+# 密钥管理配置
 # API 密钥冷却时间（秒），当密钥失败时，该密钥将在此时间内不被使用。
 # 默认值：300 (5分钟)
 API_KEY_COOL_DOWN_SECONDS=300
@@ -34,9 +45,18 @@ MAX_COOL_DOWN_SECONDS=43200
 # 默认值：90 (1.5分钟)
 RATE_LIMIT_DEFAULT_WAIT_SECONDS=90
 
-# 日志历史记录大小，用于在内存中保留的日志条目数。
-# 默认值：100
-LOG_HISTORY_SIZE=100
+# 最大重试次数。
+# 默认值：3
+MAX_RETRIES=3
+
+# 数据库配置
+# 数据库类型，可选值为 "redis" 或 "sqlite"。
+# 默认值：sqlite
+DATABASE_TYPE=sqlite
+
+# SQLite 数据库文件路径。
+# 默认值：data/sqlite.db
+SQLITE_DB=data/sqlite.db
 
 # Redis 配置
 REDIS_HOST=gemini-balance-redis
@@ -46,18 +66,7 @@ REDIS_DB=0
 # 是否强制重置数据库。
 FORCE_RESET_DATABASE=False
 
-# 最大重试次数。
-# 默认值：3
-MAX_RETRIES=3
-
-# 数据库类型，可选值为 "redis" 或 "sqlite"。
-# 默认值：sqlite
-DATABASE_TYPE=sqlite
-
-# SQLite 数据库文件路径。
-# 默认值：data/sqlite.db
-SQLITE_DB=data/sqlite.db
-
+# 认证与安全配置
 # 默认密码，用于简化登录。
 # 默认值：admin
 PASSWORD=admin
@@ -73,7 +82,3 @@ ALGORITHM=HS256
 # 访问令牌过期时间（分钟）。
 # 默认值：30
 ACCESS_TOKEN_EXPIRE_MINUTES=30
-
-# 请求超时配置（秒）
-# 默认值120
-REQUEST_TIMEOUT_SECONDS=120
