--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,15 @@
   "python.testing.unittestEnabled": false,
   "python.testing.pytestEnabled": true,
   "cSpell.words": ["autouse", "cooldown", "levelname", "pyproject"],
-  "flake8.args": ["--max-line-length=88", "--ignore=W503,E501"]
+  "flake8.args": ["--max-line-length=88", "--ignore=W503,E501"],
+  "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/.DS_Store": true,
+    "**/Thumbs.db": true,
+    "**/__pycache__": true,
+    "**/.venv": true,
+    "**/.pytest_cache": true
+  }
 }
