feat: Add configurable wait when no API keys are available
Introduces `NO_KEY_WAIT_SECONDS` setting to define the delay when no API keys are found.
When `key_manager.get_next_key()` returns no key, the system now pauses for the configured duration before retrying. This prevents immediate, failed retries and allows time for keys to become available, improving the robustness of API service calls.
Updates the log level from error to warning for this specific scenario.

--- a/.env.example
+++ b/.env.example
@@ -49,6 +49,10 @@ RATE_LIMIT_DEFAULT_WAIT_SECONDS=90
 # 默认值：3
 MAX_RETRIES=3
 
+# 无API等待时长 (秒)
+# 默认值：5
+NO_KEY_WAIT_SECONDS=5
+
 # 数据库配置
 # 数据库类型，可选值为 "redis" 或 "sqlite"。
 # 默认值：sqlite
