--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# API 配置
+############### API 配置 ###############
 # Google Gemini API 的基础 URL。
 # 默认值：https://generativelanguage.googleapis.com
 GEMINI_API_BASE_URL=https://generativelanguage.googleapis.com
@@ -11,7 +11,7 @@ OPENAI_API_BASE_URL=https://generativelanguage.googleapis.com
 # 默认值120
 REQUEST_TIMEOUT_SECONDS=120
 
-# 日志配置
+############### 日志配置 ###############
 # 日志级别 (DEBUG, INFO, WARNING, ERROR, CRITICAL)。
 # 默认值：INFO
 LOG_LEVEL=INFO
@@ -28,7 +28,7 @@ DEBUG_LOG_FILE=logs/gemini_debug.log
 # 默认值：100
 LOG_HISTORY_SIZE=100
 
-# 密钥管理配置
+############### 密钥管理配置 ###############
 # API 密钥冷却时间（秒），当密钥失败时，该密钥将在此时间内不被使用。
 # 默认值：300 (5分钟)
 API_KEY_COOL_DOWN_SECONDS=300
@@ -53,7 +53,7 @@ MAX_RETRIES=3
 # 默认值：5
 NO_KEY_WAIT_SECONDS=5
 
-# 数据库配置
+############### 数据库配置 ###############
 # 数据库类型，可选值为 "redis" 或 "sqlite"。
 # 默认值：sqlite
 DATABASE_TYPE=sqlite
@@ -70,7 +70,7 @@ REDIS_DB=0
 # 是否强制重置数据库。
 FORCE_RESET_DATABASE=False
 
-# 认证与安全配置
+############### 认证与安全配置 ###############
 # 默认密码，用于简化登录。
 # 默认值：admin
 PASSWORD=admin
@@ -86,3 +86,8 @@ ALGORITHM=HS256
 # 访问令牌过期时间（分钟）。
 # 默认值：30
 ACCESS_TOKEN_EXPIRE_MINUTES=30
+
+############### 并发设置 ###############
+# 最大并发请求数。
+# 默认值：3
+MAX_CONCURRENT_REQUESTS=3
