feat: Add configurable concurrency timeout for API requests
Introduce a timeout mechanism for acquiring concurrency semaphores in Gemini and OpenAI services.

Previously, requests could hang indefinitely if the maximum concurrent request limit was reached. This change:
- Adds a `CONCURRENCY_TIMEOUT_SECONDS` setting (default 60s) to configure the timeout.
- Implements an `asyncio.wait_for` mechanism when acquiring the semaphore.
- Returns a `408 Request Timeout` error if the semaphore cannot be acquired within the specified time.

This improves system responsiveness and prevents requests from blocking indefinitely under high load.

Also includes minor dependency updates for frontend and backend.

--- a/.env.example
+++ b/.env.example
@@ -91,3 +91,7 @@ ACCESS_TOKEN_EXPIRE_MINUTES=30
 # 最大并发请求数。
 # 默认值：3
 MAX_CONCURRENT_REQUESTS=3
+
+# 并发请求超时时间（秒）。
+# 默认值：60
+CONCURRENCY_TIMEOUT_SECONDS=60
