chore(dev-tools): Configure automated version bumping with bump-my-version
Introduce `bump-my-version` for streamlined project version management. This includes adding its configuration file (`.bumpversion.toml`) and including it as a development dependency.
Additionally, configure the Tsinghua PyPI mirror as the default for `uv`.

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -27,6 +27,11 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "bump-my-version>=1.2.1",
     "pytest>=8.4.1",
     "pytest-asyncio>=1.1.0",
 ]
+
+[[tool.uv.index]]
+url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
+default = true
