chore(config): Update bumpversion to target root pyproject.toml
Adjust the `filename` configuration in `.bumpversion.toml` to correctly locate and update the `pyproject.toml` file in the project root.

--- a/.bumpversion.toml
+++ b/.bumpversion.toml
@@ -5,7 +5,7 @@ tag = true
 message = "chore(release): version {current_version} -> {new_version}"
 
 [[tool.bumpversion.files]]
-filename = "backend/pyproject.toml"
+filename = "pyproject.toml"
 search = 'version = "{current_version}"'
 replace = 'version = "{new_version}"'
 
