--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "redis[hiredis]>=6.2.0",
     "uvicorn>=0.35.0",
     "aiosqlite>=0.21.0",
+    "pytz>=2025.2",
 ]
 
 # [[tool.uv.index]]
