--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,15 +23,11 @@ dependencies = [
 
 # [[tool.uv.index]]
 # url = "https://pypi.tuna.tsinghua.edu.cn/simple"
-# url = "https://mirrors.aliyun.com/pypi/simple"
-# default = true
+url = "https://mirrors.aliyun.com/pypi/simple"
+default = true
 
 [dependency-groups]
 dev = [
     "pytest>=8.4.1",
     "pytest-asyncio>=1.1.0",
 ]
-
-[[tool.uv.index]]
-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
-default = true
