--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,4 +27,7 @@ dependencies = [
 # default = true
 
 [dependency-groups]
-dev = []
+dev = [
+    "pytest>=8.4.2",
+    "pytest-asyncio>=1.1.0",
+]
