--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,4 @@ dependencies = [
 # default = true
 
 [dependency-groups]
-dev = [
-    "pytest>=8.4.2",
-    "pytest-asyncio>=1.1.0",
-]
+dev = []
