Implement API key in-use timeout and recovery
This commit introduces a mechanism to prevent API keys from getting stuck indefinitely in an "in use" state. Previously, if a process using a key crashed or failed to release it, the key would remain unavailable.

To address this, the following changes were made:

-   **Add `KEY_IN_USE_TIMEOUT_SECONDS` configuration:** A new setting allows defining how long a key can remain "in use" before being considered timed out.
-   **Enhance `KeyStateManager`:**
    -   Keys now track their `last_usage_time`.
    -   A background task periodically checks for "in use" keys that have exceeded `KEY_IN_USE_TIMEOUT_SECONDS` and automatically reactivates them, making them available again.
-   **Update `DBManager` implementations:**
    -   `RedisManager` and `SQLiteManager` now support retrieving keys currently marked as "in use" and store `last_usage_time`.
-   **Minor updates:**
    -   Updated `.env.example` with the new setting and minor punctuation fixes.
    -   Removed `todo_list.md`.

This improvement enhances the robustness and availability of API keys by ensuring that keys are not permanently locked due to unforeseen issues.

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ GEMINI_API_BASE_URL=https://generativelanguage.googleapis.com
 # 默认值：https://generativelanguage.googleapis.com (注意：这里可能需要根据实际OpenAI API地址调整)
 OPENAI_API_BASE_URL=https://generativelanguage.googleapis.com
 
-# 请求超时配置（秒）
+# 请求超时配置(秒)
 # 默认值120
 REQUEST_TIMEOUT_SECONDS=120
 
@@ -29,7 +29,7 @@ DEBUG_LOG_FILE=logs/gemini_debug.log
 LOG_HISTORY_SIZE=100
 
 ############### 密钥管理配置 ###############
-# API 密钥冷却时间（秒），当密钥失败时，该密钥将在此时间内不被使用。
+# API 密钥冷却时间(秒)，当密钥失败时，该密钥将在此时间内不被使用。
 # 默认值：300 (5分钟)
 API_KEY_COOL_DOWN_SECONDS=300
 
@@ -37,11 +37,11 @@ API_KEY_COOL_DOWN_SECONDS=300
 # 默认值：3
 API_KEY_FAILURE_THRESHOLD=3
 
-# API 密钥最大冷却时间（秒），防止无限期冷却。
+# API 密钥最大冷却时间(秒)，防止无限期冷却。
 # 默认值：43200 (12小时)
 MAX_COOL_DOWN_SECONDS=43200
 
-# 默认的等待时间（秒），当 API 请求被限速时，将等待此时间后重试。
+# 默认的等待时间(秒)，当 API 请求被限速时，将等待此时间后重试。
 # 默认值：90 (1.5分钟)
 RATE_LIMIT_DEFAULT_WAIT_SECONDS=90
 
@@ -52,6 +52,10 @@ MAX_RETRIES=3
 # 无API等待时长 (秒)
 # 默认值：5
 NO_KEY_WAIT_SECONDS=5
+
+# 密钥在用状态的超时时间(秒)
+# 默认值：300
+KEY_IN_USE_TIMEOUT_SECONDS=300
 
 ############### 数据库配置 ###############
 # 数据库类型，可选值为 "redis" 或 "sqlite"。
@@ -83,7 +87,7 @@ SECRET_KEY=your-super-secret-key
 # 默认值：HS256
 ALGORITHM=HS256
 
-# 访问令牌过期时间（分钟）。
+# 访问令牌过期时间(分钟)。
 # 默认值：30
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
@@ -92,6 +96,6 @@ ACCESS_TOKEN_EXPIRE_MINUTES=30
 # 默认值：3
 MAX_CONCURRENT_REQUESTS=3
 
-# 并发请求超时时间（秒）。
+# 并发请求超时时间(秒)。
 # 默认值：60
 CONCURRENCY_TIMEOUT_SECONDS=60.0
