feat: Optimize key cool-down check interval
Introduce `DEFAULT_CHECK_COOLED_DOWN_SECONDS` to configure the default cool-down check interval.

Implement `get_min_cool_down_until` in `DBManager`, `RedisDBManager`, and `SQLiteDBManager` to retrieve the earliest cool-down expiration time.

Update the `KeyStateManager`'s background task to dynamically calculate its wait time based on the `min_cool_down_until` value. This allows the task to wake up precisely when the next key is expected to cool down, rather than at fixed intervals, improving efficiency and ensuring timely key reactivation.

--- a/.env.example
+++ b/.env.example
@@ -57,6 +57,10 @@ NO_KEY_WAIT_SECONDS=5
 # 默认值：300
 KEY_IN_USE_TIMEOUT_SECONDS=300
 
+# 默认的冷却检查时间(秒)
+# 默认值：300
+DEFAULT_CHECK_COOLED_DOWN_SECONDS=300
+
 ############### 数据库配置 ###############
 # 数据库类型，可选值为 "redis" 或 "sqlite"。
 # 默认值：sqlite
