--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "python-multipart>=0.0.20",
     "uvicorn>=0.35.0",
     "aiosqlite>=0.21.0",
+    "tzdata>=2025.2",
 ]
 
 # [[tool.uv.index]]
