--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "uvicorn>=0.35.0",
     "aiosqlite>=0.21.0",
     "tzdata>=2025.2",
+    "httpx-sse>=0.4.1",
 ]
 
 # [[tool.uv.index]]
