--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,8 @@
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
+		"@date-fns/tz": "^1.4.1",
+		"date-fns": "^4.1.0",
 		"date-fns-tz": "^3.2.0"
 	}
 }
