--- a/.bumpversion.toml
+++ b/.bumpversion.toml
@@ -1,7 +1,7 @@
 [tool.bumpversion]
-current_version = "1.1.1"
+current_version = "1.1.2"
 commit = true
-tag = true
+tag = false
 message = "chore(release): version {current_version} -> {new_version}"
 
 [[tool.bumpversion.files]]
