feat: Add Cloudflare Gateway support for OpenAI API
This commit introduces integration with Cloudflare Gateway for routing OpenAI API requests.

Changes include:
- Added `CLOUDFLARE_GATEWAY_ENABLED` and `CF_AI_AUTHORIZATION_KEY` to application settings and `.env.example` for configuration.
- Implemented conditional injection of the `cf-aig-authorization` header in `ApiService` when Cloudflare Gateway is enabled.
- Updated the default `OPENAI_API_BASE_URL` in `.env.example` to `https://generativelanguage.googleapis.com/v1beta/openai` and adjusted `OpenAIService`'s API path to `/chat/completions` to align with Cloudflare's proxy structure.
- Added a specific workaround in `OpenAIService` to remove the `seed` parameter from requests when Cloudflare Gateway is active, addressing a compatibility issue.
- Updated `fdir` and `globals` npm dependencies.

This feature allows users to leverage Cloudflare Gateway for enhanced control and security over their OpenAI API traffic.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,24 +19,24 @@ services:
     depends_on:
       - v2raya
 
-  v2raya:
-    image: mzz2017/v2raya
-    container_name: v2raya
-    # 与Open Webui 共享网络，如果不需要，可删除shared_net
-    networks:
-      - shared_net
-    restart: always
-    ports:
-      - "2017:2017"
-      - "20170-20172:20170-20172"
-    environment:
-      - V2RAYA_V2RAY_BIN=/usr/local/bin/v2ray
-      - V2RAYA_LOG_FILE=/tmp/v2raya.log
-    volumes:
-      - v2raya_config:/etc/v2raya
+  # v2raya:
+  #   image: mzz2017/v2raya
+  #   container_name: v2raya
+  #   # 与Open Webui 共享网络，如果不需要，可删除shared_net
+  #   networks:
+  #     - shared_net
+  #   restart: always
+  #   ports:
+  #     - "2017:2017"
+  #     - "20170-20172:20170-20172"
+  #   environment:
+  #     - V2RAYA_V2RAY_BIN=/usr/local/bin/v2ray
+  #     - V2RAYA_LOG_FILE=/tmp/v2raya.log
+  #   volumes:
+  #     - v2raya_config:/etc/v2raya
 
-volumes:
-  v2raya_config:
+# volumes:
+#   v2raya_config:
 
 # 与Open Webui 共享网络，如果不需要，可删除shared_net
 networks:
