--- a/.env.example
+++ b/.env.example
@@ -4,12 +4,21 @@
 GEMINI_API_BASE_URL=https://generativelanguage.googleapis.com
 
 # OpenAI API 的基础 URL。
-# 默认值：https://generativelanguage.googleapis.com (注意：这里可能需要根据实际OpenAI API地址调整)
-OPENAI_API_BASE_URL=https://generativelanguage.googleapis.com
+# 默认值：https://generativelanguage.googleapis.com/v1beta/openai (注意：这里可能需要根据实际OpenAI API地址调整)
+OPENAI_API_BASE_URL=https://generativelanguage.googleapis.com/v1beta/openai
 
 # 请求超时配置(秒)
 # 默认值120
 REQUEST_TIMEOUT_SECONDS=120
+
+############### Cloudflare Gateway 配置 ###############
+# 是否使用Cloudflare Gateway API
+# 默认值：False
+CLOUDFLARE_GATEWAY_ENABLED=False
+
+# Cloudflare Gateway API 认证密钥
+# 无默认值
+# CF_AI_AUTHORIZATION_KEY=
 
 ############### 日志配置 ###############
 # 日志级别 (DEBUG, INFO, WARNING, ERROR, CRITICAL)。
