--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,8 @@ services:
     environment:
       - APP_ENV=production
       # 根据需要配置代理环境，如不需要，可删除v2rayA
-      - HTTP_PROXY=http://v2raya:20170
-      - HTTPS_PROXY=http://v2raya:20170
+      # - HTTP_PROXY=http://v2raya:20170
+      # - HTTPS_PROXY=http://v2raya:20170
     # depends_on:
     #   - v2raya
 
