feat: Improve error handling and retry mechanism
This commit refactors the API service to enhance error handling and the retry mechanism.

- **Centralized Error Handling:** The `_handle_exception_response` method has been removed, and error handling is now integrated directly into the request processing logic. This allows for more granular control over how different types of errors are managed.
- **Flexible Retry Logic:** The `MAX_RETRIES` setting is now set to -1 by default, enabling an "auto" retry mode. This allows the system to dynamically determine the number of retries based on the error type and API key status.
- **Dedicated Streaming Response Processing:** A new `_process_streaming_response` method has been introduced to specifically handle the complexities of streaming API responses, including error propagation and completion signals.
- **Improved Request Preparation:** The `_prepare_and_send_request` abstract method is added to ensure that each service implements its own request preparation and sending logic, promoting better modularity.
- **Enhanced Key Management:** The `_handle_request_error` method is introduced to centralize the logic for marking API keys as failed or successful based on the encountered errors, improving the reliability of key rotation.
- **Refined Exception Handling in Streaming:** Specific handling for `StreamingCompletionError` and `HTTPException` within streaming responses ensures that appropriate error messages are sent to the client and that critical errors are re-raised.

These changes lead to a more robust and resilient API service, capable of gracefully handling various API errors and optimizing the use of available API keys.

--- a/.env.example
+++ b/.env.example
@@ -55,8 +55,8 @@ MAX_COOL_DOWN_SECONDS=43200
 RATE_LIMIT_DEFAULT_WAIT_SECONDS=90
 
 # 最大重试次数。
-# 默认值：3
-MAX_RETRIES=3
+# 默认值：-1(auto)
+MAX_RETRIES=-1
 
 # 无API等待时长 (秒)
 # 默认值：5
