--- a/.bumpversion.toml
+++ b/.bumpversion.toml
@@ -1,7 +1,8 @@
 [tool.bumpversion]
-current_version = "1.4.1"
-commit = true
+current_version = "1.6.0"
+commit = false
 tag = false
+allow_dirty = true
 message = "chore(release): version {current_version} -> {new_version}"
 
 [[tool.bumpversion.files]]
