--- a/.env.example
+++ b/.env.example
@@ -54,6 +54,10 @@ MAX_COOL_DOWN_SECONDS=43200
 # 默认值：90 (1.5分钟)
 RATE_LIMIT_DEFAULT_WAIT_SECONDS=90
 
+# 是否在冷却结束后检查 API 健康状态。
+# 默认值：False
+CHECK_HEALTH_AFTER_COOL_DOWN=False
+
 # 最大重试次数。
 # 默认值：-1(auto)
 MAX_RETRIES=-1
