feat(frontend): Add date range picker for request logs
This commit introduces a new date range picker component for filtering request logs, replacing the previous date input fields.

The `@internationalized/date` library has been added to handle date and time operations, improving internationalization and date manipulation capabilities.

Changes include:
- Added `@internationalized/date` to `package.json` and `package-lock.json`.
- Replaced `RequestLogFilters.svelte` with `DateRangePicker.svelte` in `request-logs/+page.svelte`.
- Updated the logic for handling date range selection and filtering in `request-logs/+page.svelte` to use the new date range picker and `@internationalized/date` utilities.
- Removed unused `formatToLocalDateTimeString` utility.
- Simplified the filtering mechanism by directly using the date range picker's output.

This change enhances the user experience by providing a more intuitive way to select date ranges for log filtering.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
 	},
 	"dependencies": {
 		"@date-fns/tz": "^1.4.1",
+		"@internationalized/date": "^3.9.0",
 		"bits-ui": "^2.11.4",
 		"date-fns": "^4.1.0"
 	}
