--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
-  "python.testing.pytestArgs": ["backend/tests"],
-  "python.testing.unittestEnabled": false,
-  "python.testing.pytestEnabled": true,
+  // "python.testing.pytestArgs": ["backend/tests"],
+  // "python.testing.unittestEnabled": false,
+  // "python.testing.pytestEnabled": true,
   "cSpell.words": ["autouse", "cooldown", "levelname", "pyproject"],
   "flake8.args": ["--max-line-length=88", "--ignore=W503,E501,E203"],
   "files.exclude": {
