--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,13 @@
   // "python.testing.pytestArgs": ["backend/tests"],
   // "python.testing.unittestEnabled": false,
   // "python.testing.pytestEnabled": true,
-  "cSpell.words": ["autouse", "cooldown", "levelname", "pyproject"],
+  "cSpell.words": [
+    "autouse",
+    "cooldown",
+    "levelname",
+    "pyproject",
+    "unixepoch"
+  ],
   "flake8.args": ["--max-line-length=88", "--ignore=W503,E501,E203"],
   "files.exclude": {
     "**/.git": true,
