--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,5 +21,6 @@
     "**/.pytest_cache": true,
     "**/node_modules": true,
     "**/.svelte-kit": true,
-  }
+  },
+  "css.lint.unknownAtRules": "ignore"
 }
