--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"@tailwindcss/vite": "^4.0.0",
+		"daisyui": "^5.1.29",
 		"echarts": "^5.6.0",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
