chore(vscode): Configure Python environment management
Updates the VS Code workspace settings to standardize Python environment handling for contributors.

The `python-envs.defaultEnvManager` setting is now explicitly set to use the `venv` manager from the Microsoft Python extension. This helps the editor automatically discover and activate the correct project virtual environment, ensuring a more consistent development experience.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,7 +20,9 @@
     "**/.venv": true,
     "**/.pytest_cache": true,
     "**/node_modules": true,
-    "**/.svelte-kit": true,
+    "**/.svelte-kit": true
   },
-  "css.lint.unknownAtRules": "ignore"
+  "css.lint.unknownAtRules": "ignore",
+  "python-envs.defaultEnvManager": "ms-python.python:venv",
+  "python-envs.pythonProjects": []
 }
