feat(config, health): Add configurable health check interval and dynamic backoff
Introduces a new configuration setting `CHECK_HEALTH_TIME_INTERVAL_SECONDS` to allow customization of the delay before performing a health check on an API key after it cools down.

The random backoff logic for both rate limit retries in `ChatService` and health checks in `BackgroundTaskManager` has been updated. The random component of the wait time now uses `max(10, base_wait_time)` as its upper bound, making the backoff more dynamic and potentially longer. This change aims to improve the robustness of retry mechanisms and reduce the likelihood of immediate re-triggering of rate limits or health check failures.

--- a/.env.example
+++ b/.env.example
@@ -58,6 +58,10 @@ RATE_LIMIT_DEFAULT_WAIT_SECONDS=90
 # 默认值：False
 CHECK_HEALTH_AFTER_COOL_DOWN=False
 
+# 检查 API 健康状态的时间间隔(秒)。
+# 默认值：5
+CHECK_HEALTH_TIME_INTERVAL_SECONDS=5
+
 # 最大重试次数。
 # 默认值：-1(auto)
 MAX_RETRIES=-1
