refactor(stats): Centralize ECharts options for reusability
Extracted common ECharts configurations into a new `defaultChartOptions` file to reduce code duplication across chart components.

This change introduces the `deepmerge-ts` library to facilitate merging these default options with chart-specific settings. The `DailyUsageChart.svelte` and `SuccessRateChart.svelte` components now leverage this pattern, applying default styles and then overriding them with unique chart configurations.

Additionally, the `xAxis.boundaryGap` in `SuccessRateChart.svelte` was adjusted to `true` for improved data visualization. This refactoring enhances maintainability and consistency across ECharts instances.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "frontend",
 	"private": true,
-	"version": "1.8.2",
+	"version": "1.9.0",
 	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
@@ -44,6 +44,7 @@
 		"@internationalized/date": "^3.9.0",
 		"bits-ui": "^2.11.4",
 		"date-fns": "^4.1.0",
+		"deepmerge-ts": "^7.1.5",
 		"tailwind-merge": "^3.3.1"
 	}
 }
