--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
 		"svelte-check": "^4.0.0",
 		"svelte-echarts": "^1.0.0",
 		"tailwindcss": "^4.0.0",
+		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^7.0.4"
