feat: 添加shadcn/ui组件库和主题系统支持

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,8 +44,11 @@
 		"@date-fns/tz": "^1.4.1",
 		"@internationalized/date": "^3.9.0",
 		"bits-ui": "^2.11.4",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
 		"deepmerge-ts": "^7.1.5",
+		"lucide-react": "^0.546.0",
 		"tailwind-merge": "^3.3.1"
 	}
 }
