--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,10 @@
     "pyproject",
     "unixepoch"
   ],
-  "flake8.args": ["--max-line-length=88", "--ignore=W503,E501,E203"],
+  "flake8.args": [
+    "--max-line-length=88",
+    "--ignore=W503,E501,E203"
+  ],
   "files.exclude": {
     "**/.git": true,
     "**/.svn": true,
