--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,10 +9,7 @@
     "pyproject",
     "unixepoch"
   ],
-  "flake8.args": [
-    "--max-line-length=88",
-    "--ignore=W503,E501,E203"
-  ],
+  "flake8.args": ["--max-line-length=88", "--ignore=W503,E501,E203"],
   "files.exclude": {
     "**/.git": true,
     "**/.svn": true,
@@ -27,5 +24,5 @@
   },
   "css.lint.unknownAtRules": "ignore",
   "python-envs.defaultEnvManager": "ms-python.python:venv",
-  "python-envs.pythonProjects": []
+  "python-envs.pythonProjects": [],
 }
